issue7082: OSX style issues in new design - fix toolbar buttons alignment

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -363,7 +363,7 @@ panelTab[selected="true"] > panelTabMenu {
 .toolbar-text-button,
 .toolbar-text-menubutton {
     -moz-appearance: none;
-    margin-top: 6px;
+    margin-top: 5px;
     margin-bottom: 6px;
     padding: 0 8px;
     min-width: 0;
